Overhaul the instead of trigger generator