@@ -1,7 +1,6 @@
 package sa.com.cloudsolutions.antikythera.examples.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
@@ -15,6 +14,7 @@ import java.util.stream.Collectors;
  * to their underlying normalized tables. The generated SQL can be passed directly to
  * {@link LiquibaseGenerator#createDialectSqlChangeset}.
  */
+@SuppressWarnings("java:S1192") // allow string literals in generated SQL
 public class InsteadOfTriggerGenerator {
 
     /**
@@ -53,99 +53,54 @@ public class InsteadOfTriggerGenerator {
             List<ColumnMapping> columnMappings,
             List<ForeignKey> foreignKeys) {}
 
-    /**
-     * Generates INSTEAD OF INSERT trigger DDL for both PostgreSQL and Oracle.
-     *
-     * @param view descriptor of the view and its column mappings
-     * @return map from dialect to trigger DDL string
-     */
+    private static final String BEGIN      = "BEGIN\n";
+    private static final String END        = "END;\n";
+    private static final String FOR_EACH_ROW = "FOR EACH ROW\n";
+    private static final String PG_LANGUAGE  = "$$ LANGUAGE plpgsql;\n\n";
+
+    // -------------------------------------------------------------------------
+    // Public API
+    // -------------------------------------------------------------------------
+
+    /** Generates INSTEAD OF INSERT trigger DDL for both PostgreSQL and Oracle. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateInsert(ViewDescriptor view) {
-        Map<LiquibaseGenerator.DatabaseDialect, String> result = new EnumMap<>(LiquibaseGenerator.DatabaseDialect.class);
-        result.put(LiquibaseGenerator.DatabaseDialect.POSTGRESQL, generateInsertPostgresql(view));
-        result.put(LiquibaseGenerator.DatabaseDialect.ORACLE, generateInsertOracle(view));
-        return result;
+        return buildDialectMap(generateInsertPostgresql(view), generateInsertOracle(view));
     }
 
-    /**
-     * Generates INSTEAD OF UPDATE trigger DDL for both PostgreSQL and Oracle.
-     * Emits one UPDATE statement per normalized table using only the columns that map to it.
-     * The WHERE clause uses the base table's PK for the base table and the FK column for child tables.
-     *
-     * @param view descriptor of the view and its column mappings
-     * @return map from dialect to trigger DDL string
-     */
+    /** Generates INSTEAD OF UPDATE trigger DDL for both PostgreSQL and Oracle. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateUpdate(ViewDescriptor view) {
-        Map<LiquibaseGenerator.DatabaseDialect, String> result = new EnumMap<>(LiquibaseGenerator.DatabaseDialect.class);
-        result.put(LiquibaseGenerator.DatabaseDialect.POSTGRESQL, generateUpdatePostgresql(view));
-        result.put(LiquibaseGenerator.DatabaseDialect.ORACLE, generateUpdateOracle(view));
-        return result;
+        return buildDialectMap(generateUpdatePostgresql(view), generateUpdateOracle(view));
     }
 
-    /**
-     * Generates INSTEAD OF DELETE trigger DDL for both PostgreSQL and Oracle.
-     * Tables are deleted in reverse FK dependency order to respect FK constraints
-     * (child tables before parent/base table).
-     *
-     * @param view descriptor of the view and its column mappings
-     * @return map from dialect to trigger DDL string
-     */
+    /** Generates INSTEAD OF DELETE trigger DDL for both PostgreSQL and Oracle. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateDelete(ViewDescriptor view) {
-        Map<LiquibaseGenerator.DatabaseDialect, String> result = new EnumMap<>(LiquibaseGenerator.DatabaseDialect.class);
-        result.put(LiquibaseGenerator.DatabaseDialect.POSTGRESQL, generateDeletePostgresql(view));
-        result.put(LiquibaseGenerator.DatabaseDialect.ORACLE, generateDeleteOracle(view));
-        return result;
+        return buildDialectMap(generateDeletePostgresql(view), generateDeleteOracle(view));
     }
 
     // -------------------------------------------------------------------------
-    // Rollback DDL (Phase 7)
+    // Rollback DDL
     // -------------------------------------------------------------------------
 
-    /**
-     * Generates rollback DDL for the INSERT trigger.
-     * PostgreSQL drops both the trigger and the backing function.
-     * Oracle drops only the trigger.
-     *
-     * @param view descriptor of the view
-     * @return map from dialect to rollback SQL
-     */
+    /** Generates rollback DDL for the INSERT trigger. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateInsertRollback(ViewDescriptor view) {
         return buildTriggerRollback(view.viewName(), "insert");
     }
 
-    /**
-     * Generates rollback DDL for the UPDATE trigger.
-     *
-     * @param view descriptor of the view
-     * @return map from dialect to rollback SQL
-     */
+    /** Generates rollback DDL for the UPDATE trigger. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateUpdateRollback(ViewDescriptor view) {
         return buildTriggerRollback(view.viewName(), "update");
     }
 
-    /**
-     * Generates rollback DDL for the DELETE trigger.
-     *
-     * @param view descriptor of the view
-     * @return map from dialect to rollback SQL
-     */
+    /** Generates rollback DDL for the DELETE trigger. */
     public Map<LiquibaseGenerator.DatabaseDialect, String> generateDeleteRollback(ViewDescriptor view) {
         return buildTriggerRollback(view.viewName(), "delete");
     }
 
     private Map<LiquibaseGenerator.DatabaseDialect, String> buildTriggerRollback(String viewName, String suffix) {
-        Map<LiquibaseGenerator.DatabaseDialect, String> result =
-                new EnumMap<>(LiquibaseGenerator.DatabaseDialect.class);
-
-        // PostgreSQL: drop trigger then drop function
-        result.put(LiquibaseGenerator.DatabaseDialect.POSTGRESQL,
-                "DROP TRIGGER IF EXISTS trig_" + viewName + "_" + suffix + " ON " + viewName + ";\n"
-                + "DROP FUNCTION IF EXISTS fn_" + viewName + "_" + suffix + "();");
-
-        // Oracle: drop trigger only (no separate function)
-        result.put(LiquibaseGenerator.DatabaseDialect.ORACLE,
-                "DROP TRIGGER trig_" + viewName + "_" + suffix + ";");
-
-        return result;
+        String pgSql = "DROP TRIGGER IF EXISTS trig_" + viewName + "_" + suffix + " ON " + viewName + ";\n"
+                + "DROP FUNCTION IF EXISTS fn_" + viewName + "_" + suffix + "();";
+        String oracleSql = "DROP TRIGGER trig_" + viewName + "_" + suffix + ";";
+        return buildDialectMap(pgSql, oracleSql);
     }
 
     // -------------------------------------------------------------------------
@@ -153,86 +108,48 @@ public class InsteadOfTriggerGenerator {
     // -------------------------------------------------------------------------
 
     private String generateInsertPostgresql(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        List<String> order = TopologicalSorter.sort(view.tables(), view.foreignKeys());
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE FUNCTION fn_").append(viewName).append("_insert() RETURNS TRIGGER AS $$\n");
-        sb.append("BEGIN\n");
-
-        for (String table : order) {
-            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
-            if (cols.isEmpty()) continue;
-            String colNames = cols.stream().map(ColumnMapping::sourceColumn).collect(Collectors.joining(", "));
-            String values = cols.stream().map(cm -> "NEW." + cm.viewColumn()).collect(Collectors.joining(", "));
-            sb.append("    INSERT INTO ").append(table)
-              .append(" (").append(colNames).append(") VALUES (").append(values).append(");\n");
-        }
-
+        sb.append("CREATE OR REPLACE FUNCTION fn_").append(view.viewName()).append("_insert() RETURNS TRIGGER AS $$\n");
+        sb.append(BEGIN);
+        appendInsertStatements(view, sb, "NEW.");
         sb.append("    RETURN NEW;\n");
-        sb.append("END;\n");
-        sb.append("$$ LANGUAGE plpgsql;\n\n");
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_insert\n");
-        sb.append("INSTEAD OF INSERT ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(viewName).append("_insert();");
+        sb.append(END);
+        sb.append(PG_LANGUAGE);
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_insert\n");
+        sb.append("INSTEAD OF INSERT ON ").append(view.viewName()).append("\n");
+        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(view.viewName()).append("_insert();");
         return sb.toString();
     }
 
     private String generateUpdatePostgresql(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        ColumnMapping pkMapping = findBasePk(view, byTable);
+        ColumnMapping pkMapping = findBasePk(view, groupByTable(view));
         if (pkMapping == null) return "";
-        List<String> order = TopologicalSorter.sort(view.tables(), view.foreignKeys());
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE FUNCTION fn_").append(viewName).append("_update() RETURNS TRIGGER AS $$\n");
-        sb.append("BEGIN\n");
-
-        for (String table : order) {
-            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
-            if (cols.isEmpty()) continue;
-
-            List<ColumnMapping> setCols = deriveSetColumns(table, view.baseTable(), cols);
-            if (setCols.isEmpty()) continue;
-
-            String whereCol = deriveWhereSourceCol(table, view, pkMapping);
-            String setClause = setCols.stream()
-                    .map(cm -> cm.sourceColumn() + " = NEW." + cm.viewColumn())
-                    .collect(Collectors.joining(", "));
-            sb.append("    UPDATE ").append(table)
-              .append(" SET ").append(setClause)
-              .append(" WHERE ").append(whereCol).append(" = NEW.").append(pkMapping.viewColumn()).append(";\n");
-        }
-
+        sb.append("CREATE OR REPLACE FUNCTION fn_").append(view.viewName()).append("_update() RETURNS TRIGGER AS $$\n");
+        sb.append(BEGIN);
+        appendUpdateStatements(view, sb, "NEW.", pkMapping);
         sb.append("    RETURN NEW;\n");
-        sb.append("END;\n");
-        sb.append("$$ LANGUAGE plpgsql;\n\n");
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_update\n");
-        sb.append("INSTEAD OF UPDATE ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(viewName).append("_update();");
+        sb.append(END);
+        sb.append(PG_LANGUAGE);
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_update\n");
+        sb.append("INSTEAD OF UPDATE ON ").append(view.viewName()).append("\n");
+        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(view.viewName()).append("_update();");
         return sb.toString();
     }
 
     private String generateDeletePostgresql(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        ColumnMapping pkMapping = findBasePk(view, byTable);
+        ColumnMapping pkMapping = findBasePk(view, groupByTable(view));
         if (pkMapping == null) return "";
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE FUNCTION fn_").append(viewName).append("_delete() RETURNS TRIGGER AS $$\n");
-        sb.append("BEGIN\n");
-
-        appendDeleteStatements(view, byTable, pkMapping, sb, "OLD.");
-
+        sb.append("CREATE OR REPLACE FUNCTION fn_").append(view.viewName()).append("_delete() RETURNS TRIGGER AS $$\n");
+        sb.append(BEGIN);
+        appendDeleteStatements(view, groupByTable(view), pkMapping, sb, "OLD.");
         sb.append("    RETURN OLD;\n");
-        sb.append("END;\n");
-        sb.append("$$ LANGUAGE plpgsql;\n\n");
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_delete\n");
-        sb.append("INSTEAD OF DELETE ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(viewName).append("_delete();");
+        sb.append(END);
+        sb.append(PG_LANGUAGE);
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_delete\n");
+        sb.append("INSTEAD OF DELETE ON ").append(view.viewName()).append("\n");
+        sb.append("FOR EACH ROW EXECUTE FUNCTION fn_").append(view.viewName()).append("_delete();");
         return sb.toString();
     }
 
@@ -241,86 +158,119 @@ public class InsteadOfTriggerGenerator {
     // -------------------------------------------------------------------------
 
     private String generateInsertOracle(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        List<String> order = TopologicalSorter.sort(view.tables(), view.foreignKeys());
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_insert\n");
-        sb.append("INSTEAD OF INSERT ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW\n");
-        sb.append("BEGIN\n");
-
-        for (String table : order) {
-            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
-            if (cols.isEmpty()) continue;
-            String colNames = cols.stream().map(ColumnMapping::sourceColumn).collect(Collectors.joining(", "));
-            String values = cols.stream().map(cm -> ":NEW." + cm.viewColumn()).collect(Collectors.joining(", "));
-            sb.append("    INSERT INTO ").append(table)
-              .append(" (").append(colNames).append(") VALUES (").append(values).append(");\n");
-        }
-
-        sb.append("END;\n");
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_insert\n");
+        sb.append("INSTEAD OF INSERT ON ").append(view.viewName()).append("\n");
+        sb.append(FOR_EACH_ROW);
+        sb.append(BEGIN);
+        appendInsertStatements(view, sb, ":NEW.");
+        sb.append(END);
         sb.append("/");
         return sb.toString();
     }
 
     private String generateUpdateOracle(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        ColumnMapping pkMapping = findBasePk(view, byTable);
+        ColumnMapping pkMapping = findBasePk(view, groupByTable(view));
         if (pkMapping == null) return "";
-        List<String> order = TopologicalSorter.sort(view.tables(), view.foreignKeys());
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_update\n");
-        sb.append("INSTEAD OF UPDATE ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW\n");
-        sb.append("BEGIN\n");
-
-        for (String table : order) {
-            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
-            if (cols.isEmpty()) continue;
-
-            List<ColumnMapping> setCols = deriveSetColumns(table, view.baseTable(), cols);
-            if (setCols.isEmpty()) continue;
-
-            String whereCol = deriveWhereSourceCol(table, view, pkMapping);
-            String setClause = setCols.stream()
-                    .map(cm -> cm.sourceColumn() + " = :NEW." + cm.viewColumn())
-                    .collect(Collectors.joining(", "));
-            sb.append("    UPDATE ").append(table)
-              .append(" SET ").append(setClause)
-              .append(" WHERE ").append(whereCol).append(" = :NEW.").append(pkMapping.viewColumn()).append(";\n");
-        }
-
-        sb.append("END;\n");
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_update\n");
+        sb.append("INSTEAD OF UPDATE ON ").append(view.viewName()).append("\n");
+        sb.append(FOR_EACH_ROW);
+        sb.append(BEGIN);
+        appendUpdateStatements(view, sb, ":NEW.", pkMapping);
+        sb.append(END);
         sb.append("/");
         return sb.toString();
     }
 
     private String generateDeleteOracle(ViewDescriptor view) {
-        String viewName = view.viewName();
-        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
-        ColumnMapping pkMapping = findBasePk(view, byTable);
+        ColumnMapping pkMapping = findBasePk(view, groupByTable(view));
         if (pkMapping == null) return "";
-
         StringBuilder sb = new StringBuilder();
-        sb.append("CREATE OR REPLACE TRIGGER trig_").append(viewName).append("_delete\n");
-        sb.append("INSTEAD OF DELETE ON ").append(viewName).append("\n");
-        sb.append("FOR EACH ROW\n");
-        sb.append("BEGIN\n");
-
-        appendDeleteStatements(view, byTable, pkMapping, sb, ":OLD.");
-
-        sb.append("END;\n");
+        sb.append("CREATE OR REPLACE TRIGGER trig_").append(view.viewName()).append("_delete\n");
+        sb.append("INSTEAD OF DELETE ON ").append(view.viewName()).append("\n");
+        sb.append(FOR_EACH_ROW);
+        sb.append(BEGIN);
+        appendDeleteStatements(view, groupByTable(view), pkMapping, sb, ":OLD.");
+        sb.append(END);
         sb.append("/");
         return sb.toString();
     }
 
     // -------------------------------------------------------------------------
+    // Shared statement body builders
+    // -------------------------------------------------------------------------
+
+    /**
+     * Appends one INSERT statement per table, in topological order.
+     *
+     * @param newPrefix "NEW." for PostgreSQL, ":NEW." for Oracle
+     */
+    private void appendInsertStatements(ViewDescriptor view, StringBuilder sb, String newPrefix) {
+        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
+        for (String table : TopologicalSorter.sort(view.tables(), view.foreignKeys())) {
+            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
+            if (cols.isEmpty()) continue;
+            String colNames = cols.stream().map(ColumnMapping::sourceColumn).collect(Collectors.joining(", "));
+            String values   = cols.stream().map(cm -> newPrefix + cm.viewColumn()).collect(Collectors.joining(", "));
+            sb.append("    INSERT INTO ").append(table)
+              .append(" (").append(colNames).append(") VALUES (").append(values).append(");\n");
+        }
+    }
+
+    /**
+     * Appends one UPDATE statement per table, in topological order.
+     *
+     * @param newPrefix "NEW." for PostgreSQL, ":NEW." for Oracle
+     * @param pkMapping the PK column mapping of the base table
+     */
+    private void appendUpdateStatements(ViewDescriptor view, StringBuilder sb, String newPrefix, ColumnMapping pkMapping) {
+        Map<String, List<ColumnMapping>> byTable = groupByTable(view);
+        for (String table : TopologicalSorter.sort(view.tables(), view.foreignKeys())) {
+            List<ColumnMapping> cols    = byTable.getOrDefault(table, List.of());
+            List<ColumnMapping> setCols = deriveSetColumns(cols);
+            if (setCols.isEmpty()) continue;
+            String whereCol   = deriveWhereSourceCol(table, view, pkMapping);
+            String setClause  = setCols.stream()
+                    .map(cm -> cm.sourceColumn() + " = " + newPrefix + cm.viewColumn())
+                    .collect(Collectors.joining(", "));
+            sb.append("    UPDATE ").append(table)
+              .append(" SET ").append(setClause)
+              .append(" WHERE ").append(whereCol).append(" = ").append(newPrefix).append(pkMapping.viewColumn()).append(";\n");
+        }
+    }
+
+    /**
+     * Appends DELETE statements in reverse FK dependency order (child tables first, base table last).
+     *
+     * @param oldPrefix "OLD." for PostgreSQL, ":OLD." for Oracle
+     */
+    private void appendDeleteStatements(ViewDescriptor view,
+                                        Map<String, List<ColumnMapping>> byTable,
+                                        ColumnMapping pkMapping,
+                                        StringBuilder sb,
+                                        String oldPrefix) {
+        for (String table : TopologicalSorter.sort(view.tables(), view.foreignKeys()).reversed()) {
+            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
+            if (cols.isEmpty()) continue;
+            String whereCol = deriveWhereSourceCol(table, view, pkMapping);
+            sb.append("    DELETE FROM ").append(table)
+              .append(" WHERE ").append(whereCol)
+              .append(" = ").append(oldPrefix).append(pkMapping.viewColumn()).append(";\n");
+        }
+    }
+
+    // -------------------------------------------------------------------------
     // Shared helpers
     // -------------------------------------------------------------------------
+
+    /** Builds a dialect map from pre-generated PostgreSQL and Oracle DDL strings. */
+    private Map<LiquibaseGenerator.DatabaseDialect, String> buildDialectMap(String postgresqlDdl, String oracleDdl) {
+        Map<LiquibaseGenerator.DatabaseDialect, String> result = new EnumMap<>(LiquibaseGenerator.DatabaseDialect.class);
+        result.put(LiquibaseGenerator.DatabaseDialect.POSTGRESQL, postgresqlDdl);
+        result.put(LiquibaseGenerator.DatabaseDialect.ORACLE, oracleDdl);
+        return result;
+    }
 
     /** Groups column mappings by their source table, preserving insertion order. */
     private Map<String, List<ColumnMapping>> groupByTable(ViewDescriptor view) {
@@ -337,16 +287,14 @@ public class InsteadOfTriggerGenerator {
      */
     private ColumnMapping findBasePk(ViewDescriptor view, Map<String, List<ColumnMapping>> byTable) {
         List<ColumnMapping> baseMappings = byTable.getOrDefault(view.baseTable(), List.of());
-        return baseMappings.isEmpty() ? null : baseMappings.get(0);
+        return baseMappings.isEmpty() ? null : baseMappings.getFirst();
     }
 
     /**
-     * Returns the SET columns for an UPDATE statement:
-     * - For the base table: all columns except the first (PK).
-     * - For child tables: all columns except the first (FK to base table).
+     * Returns the SET columns for an UPDATE statement: all columns except the first
+     * (which is the PK for the base table or the FK column for child tables).
      */
-    private List<ColumnMapping> deriveSetColumns(String table, String baseTable, List<ColumnMapping> cols) {
-        // Skip the first column (PK for base table, FK for child tables)
+    private List<ColumnMapping> deriveSetColumns(List<ColumnMapping> cols) {
         return cols.size() > 1 ? cols.subList(1, cols.size()) : List.of();
     }
 
@@ -365,28 +313,5 @@ public class InsteadOfTriggerGenerator {
                 .findFirst()
                 .orElseThrow(() -> new IllegalArgumentException(
                         "No FK from " + table + " to " + view.baseTable() + " found in foreignKeys"));
-    }
-
-    /**
-     * Appends DELETE statements in reverse FK dependency order (child tables first, base table last).
-     * The {@code oldPrefix} is "OLD." for PostgreSQL and ":OLD." for Oracle.
-     */
-    private void appendDeleteStatements(ViewDescriptor view,
-                                        Map<String, List<ColumnMapping>> byTable,
-                                        ColumnMapping pkMapping,
-                                        StringBuilder sb,
-                                        String oldPrefix) {
-        List<String> reverseOrder = new ArrayList<>(TopologicalSorter.sort(view.tables(), view.foreignKeys()));
-        Collections.reverse(reverseOrder);
-
-        for (String table : reverseOrder) {
-            List<ColumnMapping> cols = byTable.getOrDefault(table, List.of());
-            if (cols.isEmpty()) continue;
-
-            String whereCol = deriveWhereSourceCol(table, view, pkMapping);
-            sb.append("    DELETE FROM ").append(table)
-              .append(" WHERE ").append(whereCol)
-              .append(" = ").append(oldPrefix).append(pkMapping.viewColumn()).append(";\n");
-        }
     }
 }
